[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Damien Dubé <damien.dube@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.0.5"
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

