[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Damien Dubé <damien.dube@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docker = "^4.1.0"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
docker_build = "scripts:build"
docker_clean = "scripts:clean"
docker_run = "scripts:run"
docker_stop = "scripts:stop"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
